--- a/pages/18539.html
+++ b/pages/18539.html
@@ -317,6 +317,8 @@ margin-left: 0em;
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative</a>, <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a>, <a class='existingWikiWord' href='/nlab/show/homotopical+algebraic+quantum+field+theory'>homotopical</a>)</p>
 
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>Introduction</a></p>
+
 <h2 id='concepts'>Concepts</h2>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
@@ -335,15 +337,25 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/field+history'>field history</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/space+of+field+histories'>space of field histories</a></p>
+</li>
 </ul>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange</a> <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a></p>
+</li>
+</ul>
 </li>
 
 <li>
@@ -352,10 +364,22 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/advanced+and+retarded+causal+propagators'>advanced and retarded propagator</a>,</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+</li>
+</ul>
+</li>
+</ul>
 </li>
 </ul>
 
@@ -363,15 +387,15 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a> <a class='existingWikiWord' href='/nlab/show/geometric+quantization+of+symplectic+groupoids'>of symplectic groupoids</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a>, <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a></p>
 </li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong>, <strong><a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></strong></p>
 
 <ul>
 <li>
@@ -383,7 +407,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observables</a></p>
 </li>
 
 <li>
@@ -431,11 +455,19 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>, <a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>, <a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation value</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a>, <a class='existingWikiWord' href='/nlab/show/pure+state'>mixed state</a>, <a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>wave function</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/wave+function+collapse'>collapse of the wave function</a>/<a class='existingWikiWord' href='/nlab/show/conditional+expectation'>conditional expectation value</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pure+state'>mixed state</a>, <a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
 </li>
 
 <li>
@@ -452,6 +484,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Wightman propagator</a></p>
 </li>
 </ul>
 </li>
@@ -517,7 +553,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>gauge anomaly</a></p>
 </li>
 </ul>
 
@@ -526,6 +562,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a></p>
 </li>
 
 <li>
@@ -543,33 +583,13 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>, <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></p>
 </li>
-</ul>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>effective action</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>renormalization scheme</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization+group'>renormalization group</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gell-Mann-Low+renormalization+cocycle'>Gell-Mann-Low renormalization cocycle</a></p>
-</li>
-</ul>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+stability'>vacuum stability</a></p>
 </li>
 </ul>
 </li>
@@ -578,7 +598,13 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/M%C3%B8ller+operator'>quantum Møller operator</a></p>
+</li>
 </ul>
 </li>
 
@@ -592,6 +618,68 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/interacting+vacuum'>interacting vacuum</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>(&quot;re-&quot;)normalization scheme</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+condition'>(&quot;re&quot;-)normalization condition</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+group'>renormalization group</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interaction+vertex+redefinition'>interaction vertex redefinition</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>renormalization group flow</a>/<a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>running coupling constants</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective quantum field theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>UV cutoff</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/counterterm'>counterterms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>relative effective action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Wilsonian RG</a>, <a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Polchinski flow equation</a></p>
 </li>
 </ul>
 </li>
@@ -730,7 +818,7 @@ margin-left: 0em;
 
 <p>More abstractly, the algebra of observables is the <a class='existingWikiWord' href='/nlab/show/deformation+quantization'>formal deformation quantization</a> (specifically <a class='existingWikiWord' href='/nlab/show/Fedosov%27s+deformation+quantization'>Fedosov deformation quantization</a>) of the <a class='existingWikiWord' href='/nlab/show/interacting+field+theory'>interacting field theory</a> (<a href='#Collini16'>Collini 16</a>, <a href='#HawkinsRejzner16'>Hawkins-Rejzner 16</a>).</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_45a5d5d681d70178c63938ec7ca13eda16a903c0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_acc81f29ef84698c48128816e0c84ce16388ae0c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -763,7 +851,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Dirac+interaction+picture'>interaction picture</a></p>
 </li>
 </ul>
-<table><thead><tr><th>product in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a></th><th><math class='maruku-mathml' display='inline' id='mathml_45a5d5d681d70178c63938ec7ca13eda16a903c0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,\,</annotation></semantics></math> induces</th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal-ordered product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> (<a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a>)</td></tr>
+<table><thead><tr><th>product in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a></th><th><math class='maruku-mathml' display='inline' id='mathml_acc81f29ef84698c48128816e0c84ce16388ae0c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,\,</annotation></semantics></math> induces</th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal-ordered product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> (<a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a>)</td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> (<a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitudes</a>)</td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/retarded+product'>retarded product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting quantum observables</a></td></tr>
 </tbody></table>
@@ -837,17 +925,21 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on January 19, 2018 07:07:36 
+  Revised on February  9, 2018 02:40:52 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/interacting+field+algebra+of+observables" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/interacting+field+algebra+of+observables/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/interacting+field+algebra+of+observables" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/interacting+field+algebra+of+observables" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/interacting+field+algebra+of+observables" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/interacting+field+algebra+of+observables/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/interacting+field+algebra+of+observables" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/interacting+field+algebra+of+observables" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
