--- a/pages/18985.html
+++ b/pages/18985.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      length in nLab
+      length scale in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      length
+      length scale
   </h1>
 
 
@@ -308,28 +308,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='idea'>Idea</h2>
+    <p><a class='existingWikiWord' href='/nlab/show/length'>length</a> scale</p>
 
-<p>Length is the <a class='existingWikiWord' href='/nlab/show/volume'>volume</a> of 1-<a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a>al spaces.</p>
-
-<h2 id='related_concept'>Related concept</h2>
+<h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/length+scale'>length scale</a></p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/scale+transformation'>scaling transformation</a></li>
+</ul>
 
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/wavelength'>wave length</a></p>
-</li>
+<h2 id='references'>References</h2>
 
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Planck+length'>Planck length</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Compton+wavelength'>Compton wavelength</a></p>
-</li>
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Spatial_scale'>Spatial scale</a></em></li>
 </ul>
 
 <p>
@@ -337,22 +327,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  9, 2018 05:57:11 
+  Created on February  9, 2018 05:56:06 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/length" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/length/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/length" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/length" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/length+scale" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/length" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/length+scale" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/length" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/length+scale" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/length" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/length+scale" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
