--- a/pages/4815.html
+++ b/pages/4815.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -899,30 +899,30 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#CCProblemReferences'>On the Cosmological constant problem</a></li><li><a href='#in_string_theory'>In string theory</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#CCProblemReferences'>On the Cosmological constant problem</a></li><li><a href='#in_paqft'>In pAQFT</a></li><li><a href='#in_string_theory'>In string theory</a></li></ul></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
 <p>In an <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> on a space of <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifolds</a> – such as the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> functional for <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> – a <strong>cosmological constant</strong> is a term proportional to the <a class='existingWikiWord' href='/nlab/show/volume'>volume</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9b451b56cdc98e32d1c32840255ef022afc54e90_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>cos</mi></msub><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_1b124e20d05bf117f98132a539d6c6ffcd1d3bf2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>cos</mi></msub><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   S_{cos} :  (X,g) \mapsto \lambda \int_X dvol_g
   \,,
 
 </annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_9b451b56cdc98e32d1c32840255ef022afc54e90_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\lambda \in \mathbb{R}</annotation></semantics></math> is the <em>cosmological constant</em> .</p>
+<p>where <math class='maruku-mathml' display='inline' id='mathml_1b124e20d05bf117f98132a539d6c6ffcd1d3bf2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\lambda \in \mathbb{R}</annotation></semantics></math> is the <em>cosmological constant</em> .</p>
 
 <p>For instance pure Einstein-Hilbert gravity with cosmological constant (and not other fields) is given by the functional</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9b451b56cdc98e32d1c32840255ef022afc54e90_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>EH</mi></msub><mo>+</mo><msub><mi>S</mi> <mi>cos</mi></msub><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>R</mi><mi>dvol</mi><mo>+</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><mi>d</mi><msub><mi>vol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_1b124e20d05bf117f98132a539d6c6ffcd1d3bf2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>EH</mi></msub><mo>+</mo><msub><mi>S</mi> <mi>cos</mi></msub><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>R</mi><mi>dvol</mi><mo>+</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><mi>d</mi><msub><mi>vol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   S_{EH} + S_{cos} :  (X,g) \mapsto \int_X R dvol + \lambda \int_X d vol_g
   \,,
 
 </annotation></semantics></math></div>
-<p>Generically it happens that one considers action functionals where <math class='maruku-mathml' display='inline' id='mathml_9b451b56cdc98e32d1c32840255ef022afc54e90_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math> is in fact not a constant, but a function of other fields <math class='maruku-mathml' display='inline' id='mathml_9b451b56cdc98e32d1c32840255ef022afc54e90_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>\phi</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_9b451b56cdc98e32d1c32840255ef022afc54e90_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9b451b56cdc98e32d1c32840255ef022afc54e90_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo>,</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>Generically it happens that one considers action functionals where <math class='maruku-mathml' display='inline' id='mathml_1b124e20d05bf117f98132a539d6c6ffcd1d3bf2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math> is in fact not a constant, but a function of other fields <math class='maruku-mathml' display='inline' id='mathml_1b124e20d05bf117f98132a539d6c6ffcd1d3bf2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>\phi</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_1b124e20d05bf117f98132a539d6c6ffcd1d3bf2_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_1b124e20d05bf117f98132a539d6c6ffcd1d3bf2_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo>,</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   S : (X,g,\phi) \mapsto \int_X \lambda(\phi) dvol_g
   \,.
 
 </annotation></semantics></math></div>
-<p>In this context those solutions to the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equation</a>s are of interest in which <math class='maruku-mathml' display='inline' id='mathml_9b451b56cdc98e32d1c32840255ef022afc54e90_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\lambda(\phi)</annotation></semantics></math> happens to be exactly or approximately constant. Many such models of not-really-constant-but-effectively-constant terms proportional to the volume are being proposed and considered in attempts to explain observed or speculated dynamics of the cosmos.</p>
+<p>In this context those solutions to the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equation</a>s are of interest in which <math class='maruku-mathml' display='inline' id='mathml_1b124e20d05bf117f98132a539d6c6ffcd1d3bf2_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\lambda(\phi)</annotation></semantics></math> happens to be exactly or approximately constant. Many such models of not-really-constant-but-effectively-constant terms proportional to the volume are being proposed and considered in attempts to explain observed or speculated dynamics of the cosmos.</p>
 
 <p>See in particular at <a class='existingWikiWord' href='/nlab/show/FRW+model'>FRW model</a> for the role of the cosmological constant in homogeneous and isotropic models as in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a>. In that context the cosmological constant is also called the <em>dark energy</em> (density), which makes up about 70% of the energy density of the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> (the rest being <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a>) and a comparatively little bit of <a class='existingWikiWord' href='/nlab/show/baryon'>baryonic</a> <a class='existingWikiWord' href='/nlab/show/matter'>matter</a>.</p>
 
@@ -974,6 +974,14 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h3 id='in_paqft'>In pAQFT</h3>
+
+<p>Discussion in the rigorous formulation of <span class='newWikiWord'>[perturbative AQFT<a href='/nlab/new/%5Bperturbative+AQFT'>?</a></span> includes</p>
+
+<ul>
+<li>[[Claudio Dappiaggi], Thomas-Paul Hack, Jan Möller, <a class='existingWikiWord' href='/nlab/show/Nicola+Pinamonti'>Nicola Pinamonti</a>, <em>Dark Energy from Quantum Matter</em> (<a href='https://arxiv.org/abs/1007.5009'>arXiv:1007.5009</a>)</li>
+</ul>
+
 <h3 id='in_string_theory'>In string theory</h3>
 
 <p>Discussion from the point of view of <a class='existingWikiWord' href='/nlab/show/string+theory'>perturbative string theory</a>, where the cosmological constant is fixed by the choice of <a class='existingWikiWord' href='/nlab/show/perturbative+string+theory+vacuum'>perturbative string theory vacuum</a> includes</p>
@@ -1015,14 +1023,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  7, 2018 10:36:17 
+  Revised on February  9, 2018 05:50:53 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cosmological+constant" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmological+constant/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/cosmological+constant" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmological+constant" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cosmological+constant" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmological+constant/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/cosmological+constant" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmological+constant" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
