--- a/pages/4815.html
+++ b/pages/4815.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -995,40 +995,34 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition_2'>Definition</a><ul><li><a href='#in_classical_gravity'>In classical gravity</a></li><li><a href='#observation'>Observation</a></li><li><a href='#InPerturbativeQuantumGravity'>In perturbative quantum gravity</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#ReferencedInpAQFT'>In pAQFT</a></li><li><a href='#CCProblemReferences'>The “cosmological constant problem”</a></li><li><a href='#in_string_theory'>In string theory</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#definition_2'>Definition</a><ul><li><a href='#in_classical_gravity'>In classical gravity</a></li><li><a href='#InPerturbativeQuantumGravity'>In perturbative quantum gravity</a></li><li><a href='#observation'>Observation</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#ReferencedInpAQFT'>In pAQFT</a></li><li><a href='#CCProblemReferences'>The “cosmological constant problem”</a></li><li><a href='#in_string_theory'>In string theory</a></li></ul></li></ul></div>
 <h2 id='definition_2'>Definition</h2>
 
 <h3 id='in_classical_gravity'>In classical gravity</h3>
 
 <p>In an <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> on a space of <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifolds</a> – such as the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> functional for <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> – a <strong>cosmological constant</strong> is a term proportional to the <a class='existingWikiWord' href='/nlab/show/volume'>volume</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_bc189380a6ae5b4b4447bc523f545c802c58a991_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>cc</mi></msub><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fe3d0a485e369b99f4e7be8a3b7f7c724962b631_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>cc</mi></msub><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   S_{cc} :  (X,g) \mapsto \lambda \int_X dvol_g
   \,,
 
 </annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_bc189380a6ae5b4b4447bc523f545c802c58a991_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\lambda \in \mathbb{R}</annotation></semantics></math> is the <em>cosmological constant</em> .</p>
+<p>where <math class='maruku-mathml' display='inline' id='mathml_fe3d0a485e369b99f4e7be8a3b7f7c724962b631_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\lambda \in \mathbb{R}</annotation></semantics></math> is the <em>cosmological constant</em> .</p>
 
 <p>For instance pure Einstein-Hilbert gravity with cosmological constant (and no other fields) is given by the functional</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_bc189380a6ae5b4b4447bc523f545c802c58a991_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>EH</mi></msub><mo>+</mo><msub><mi>S</mi> <mi>cos</mi></msub><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>R</mi><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo>+</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><mi>d</mi><msub><mi>vol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fe3d0a485e369b99f4e7be8a3b7f7c724962b631_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>EH</mi></msub><mo>+</mo><msub><mi>S</mi> <mi>cos</mi></msub><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>R</mi><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo>+</mo><mi>λ</mi><msub><mo>∫</mo> <mi>X</mi></msub><mi>d</mi><msub><mi>vol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   S_{EH} + S_{cos} :  (X,g) \mapsto \int_X R\, dvol + \lambda \int_X d vol_g
   \,,
 
 </annotation></semantics></math></div>
-<p>Generically it happens that one considers action functionals where <math class='maruku-mathml' display='inline' id='mathml_bc189380a6ae5b4b4447bc523f545c802c58a991_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math> is in fact not a constant, but a function of other fields <math class='maruku-mathml' display='inline' id='mathml_bc189380a6ae5b4b4447bc523f545c802c58a991_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>\phi</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_bc189380a6ae5b4b4447bc523f545c802c58a991_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_bc189380a6ae5b4b4447bc523f545c802c58a991_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo>,</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>Generically it happens that one considers action functionals where <math class='maruku-mathml' display='inline' id='mathml_fe3d0a485e369b99f4e7be8a3b7f7c724962b631_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math> is in fact not a constant, but a function of other fields <math class='maruku-mathml' display='inline' id='mathml_fe3d0a485e369b99f4e7be8a3b7f7c724962b631_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>\phi</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_fe3d0a485e369b99f4e7be8a3b7f7c724962b631_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fe3d0a485e369b99f4e7be8a3b7f7c724962b631_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo>,</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><mo>↦</mo><msub><mo>∫</mo> <mi>X</mi></msub><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo><msub><mi>dvol</mi> <mi>g</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   S : (X,g,\phi) \mapsto \int_X \lambda(\phi) dvol_g
   \,.
 
 </annotation></semantics></math></div>
-<p>In this context those solutions to the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equation</a>s are of interest in which <math class='maruku-mathml' display='inline' id='mathml_bc189380a6ae5b4b4447bc523f545c802c58a991_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\lambda(\phi)</annotation></semantics></math> happens to be exactly or approximately constant. Many such models of not-really-constant-but-effectively-constant terms proportional to the volume are being proposed and considered in attempts to explain observed or speculated dynamics of the cosmos.</p>
+<p>In this context those solutions to the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equation</a>s are of interest in which <math class='maruku-mathml' display='inline' id='mathml_fe3d0a485e369b99f4e7be8a3b7f7c724962b631_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\lambda(\phi)</annotation></semantics></math> happens to be exactly or approximately constant. Many such models of not-really-constant-but-effectively-constant terms proportional to the volume are being proposed and considered in attempts to explain observed or speculated dynamics of the cosmos.</p>
 
 <p>See in particular at <em><a class='existingWikiWord' href='/nlab/show/FRW+model'>FRW model</a></em> for the role of the cosmological constant in homogeneous and isotropic models as in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a>. In that context the cosmological constant is also called the <em>dark energy</em> (density), which makes up about 70% of the energy density of the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> (the rest being <a class='existingWikiWord' href='/nlab/show/dark+matter'>dark matter</a>) and a comparatively little bit of <a class='existingWikiWord' href='/nlab/show/baryon'>baryonic</a> <a class='existingWikiWord' href='/nlab/show/matter'>matter</a>.</p>
-
-<h3 id='observation'>Observation</h3>
-
-<p><img src='http://ncatlab.org/nlab/files/DarkEnergyConcordance.gif' width='500'/></p>
-
-<p>(e.g. <a href='#Einasto09'>Einasto 09, fig 17</a>)</p>
 
 <h3 id='InPerturbativeQuantumGravity'>In perturbative quantum gravity</h3>
 
@@ -1037,6 +1031,12 @@ margin-left: 0em;
 <p>This means that apart from the freedom of choosing a classical comsological constant in the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> as above, its <a href='A+first+idea+of+quantum+field+theory#InteractingQuantumFields'>perturbative quantization</a> (<a class='existingWikiWord' href='/nlab/show/quantum+gravity'>perturbative quantum gravity</a>) introduces <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> freedom to the value of the cosmological constant.</p>
 
 <p>The folklore discussion of the “cosmological constant problem” (see the references <a href='#CCProblemReferences'>below</a>) tends not to take this freedom in the theory into account.</p>
+
+<h3 id='observation'>Observation</h3>
+
+<p><img src='http://ncatlab.org/nlab/files/DarkEnergyConcordance.gif' width='500'/></p>
+
+<p>(e.g. <a href='#Einasto09'>Einasto 09, fig 17</a>)</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -1153,7 +1153,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  9, 2018 06:54:41 
+  Revised on February  9, 2018 07:01:18 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
