--- a/pages/18989.html
+++ b/pages/18989.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      GeV in nLab
+      MeV in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      GeV
+      MeV
   </h1>
 
 
@@ -308,13 +308,13 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>A <a class='existingWikiWord' href='/nlab/show/physical+unit'>physical unit</a> of <a class='existingWikiWord' href='/nlab/show/energy'>energy</a>: giga-<a class='existingWikiWord' href='/nlab/show/electronvolt'>electronvolt</a>.</p>
+    <p>A <a class='existingWikiWord' href='/nlab/show/physical+unit'>physical unit</a> of <a class='existingWikiWord' href='/nlab/show/energy'>energy</a>: mega-<a class='existingWikiWord' href='/nlab/show/electronvolt'>electronvolt</a>.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/MeV'>MeV</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a></p>
 </li>
 
 <li>
@@ -330,22 +330,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  9, 2018 15:18:17 
+  Created on February  9, 2018 15:18:47 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/GeV" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/GeV/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/GeV" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/GeV" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/MeV" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/GeV" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/MeV" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/GeV" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/MeV" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/GeV" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/MeV" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
