--- a/pages/11379.html
+++ b/pages/11379.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -313,19 +313,31 @@ margin-left: 0em;
 <h2 id='related_entries'>Related entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/MeV'>MeV</a></p>
+</li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Electronvolt'>Electronvolt</a></em></li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Created on March 24, 2014 03:03:24 
+  Revised on February  9, 2018 15:19:11 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.137.20)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/TeV" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/TeV" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/TeV/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/TeV" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/TeV" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
