--- a/pages/11380.html
+++ b/pages/11380.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,12 +308,15 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>A <a class='existingWikiWord' href='/nlab/show/unit'>unit</a> of <a class='existingWikiWord' href='/nlab/show/energy'>energy</a></p>
+    <p>A <a class='existingWikiWord' href='/nlab/show/physical+unit'>physical unit</a> of <a class='existingWikiWord' href='/nlab/show/energy'>energy</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/MeV'>MeV</a>, <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>, <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a></p>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li>Wikipedia, <em>Electronvoltluctuation)</em></li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Electronvolt'>Electronvolt</a></em> 
+</li>
 </ul>
 
 <p>
@@ -321,14 +324,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on March 24, 2014 03:04:54 
+  Revised on February  9, 2018 15:20:53 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.137.20)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/electronvolt" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/electronvolt" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electronvolt/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/electronvolt" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electronvolt" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
