--- a/pages/10346.html
+++ b/pages/10346.html
@@ -315,10 +315,10 @@ margin-left: 0em;
 <h2 id='writings'>Writings</h2>
 
 <ul>
-<li id='QuarkOrBootstrap'><em>Quark or Bootstrap: Triumph or Frustration for Hadron Physics</em>, Physics Today, May 1970 (<a href='https://pubarchive.lbl.gov/islandora/object/ir%3A144169/datastream/PDF/view'>web</a>)</li>
+<li id='QuarkOrBootstrap'><em>Quark or Bootstrap: Triumph or Frustration for Hadron Physics</em>, Physics Today, May 1970 (<a href='https://pubarchive.lbl.gov/islandora/object/ir%3A144169/datastream/PDF/view'>web</a>, <a class='existingWikiWord' href='/nlab/files/Chew70.pdf' title='pdf'>pdf</a>)</li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_17feda4a1b7d9ed473d42dadca04cf1f3cd3158f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_bffc7709de4b497127b7268a87f1813e821a608e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></li>
@@ -328,14 +328,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 20, 2017 09:14:45 
+  Revised on February 10, 2018 09:28:14 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.49.59)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Geoffrey+Chew" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Geoffrey+Chew/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Geoffrey+Chew" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Geoffrey+Chew" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Geoffrey+Chew" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Geoffrey+Chew/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Geoffrey+Chew" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Geoffrey+Chew" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
