--- a/pages/18602.html
+++ b/pages/18602.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1393,26 +1393,44 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#details'>Details</a></li><li><a href='#QuantumGravityCorrection'>Quantum gravity correction</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#contributions'>Contributions</a><ul><li><a href='#qed_contributions'>QED contributions</a></li><li><a href='#QuantumGravityCorrection'>Quantum gravity contributions</a></li><li><a href='#axion_contributions'>Axion contributions</a></li></ul></li><li><a href='#references'>References</a><ul><li><a href='#qed_contributions_2'>QED contributions</a></li><li><a href='#gravity_contributions'>Gravity contributions</a></li><li><a href='#axion_contributions_2'>Axion contributions</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, the <a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>magnetic moment</a> of <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> as predicted by <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> may receive corrections due to <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum effects</a>. Such corrections are also called <em><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomalies</a></em>, and hence one speaks of the <em>anomalous magnetic moments</em>, traditionally denoted by “<math class='maruku-mathml' display='inline' id='mathml_bcc2a3943cc429c15390375ebb6dce26a47ba7bb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>g-2</annotation></semantics></math>”.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, the <a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>magnetic moment</a> of <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> as predicted by <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> may receive corrections due to <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum effects</a>. Such corrections are also called <em><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomalies</a></em>, and hence one speaks of the <em>anomalous magnetic moments</em>, traditionally denoted by “<math class='maruku-mathml' display='inline' id='mathml_58e20110545befa7629660f4183ad7fe61ac8a79_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>g-2</annotation></semantics></math>”.</p>
 
-<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_bcc2a3943cc429c15390375ebb6dce26a47ba7bb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
+<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_58e20110545befa7629660f4183ad7fe61ac8a79_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
 
 <p>Similarly there is the anomalous magenetic moment of the <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> and the other <a class='existingWikiWord' href='/nlab/show/lepton'>leptons</a>.</p>
 
-<h2 id='details'>Details</h2>
+<h2 id='contributions'>Contributions</h2>
+
+<h3 id='qed_contributions'>QED contributions</h3>
 
 <p>(…) for the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> see e.g. <a href='#Scharf95'>Scharf 95, section 3.10</a> (…)</p>
 
-<h2 id='QuantumGravityCorrection'>Quantum gravity correction</h2>
+<h3 id='QuantumGravityCorrection'>Quantum gravity contributions</h3>
 
 <p>The further corrections of <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>perturbative quantum gravity</a> to the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> and the <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> have been computed in (<a href='#BerendsGastman75'>Berends-Gastman 75</a>) and found to be finite without need for <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>. These <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> contribute:</p>
 
 <p><img src='https://ncatlab.org/nlab/files/GravityVertexCorrectionsForQED.png' width='750'/></p>
 
+<h3 id='axion_contributions'>Axion contributions</h3>
+
+<p>Possible contributions to and xconstraints on <math class='maruku-mathml' display='inline' id='mathml_58e20110545befa7629660f4183ad7fe61ac8a79_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>g</mi> <mi>lep</mi></msub><mo>−</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>g_{lep}-2</annotation></semantics></math> from hypothetical <a class='existingWikiWord' href='/nlab/show/axion'>axions</a> are discussed in <a href='#MMPP16'>MMPP 16</a>, <a href='#BNT17'>BNT 17</a>…</p>
+
 <h2 id='references'>References</h2>
+
+<ul>
+<li id='Steinmann02'><a class='existingWikiWord' href='/nlab/show/Othmar+Steinmann'>Othmar Steinmann</a>, <em>What is the Magnetic Moment of the Electron?</em>, Commun.Math.Phys. 237 (2003) 181-201 (<a href='https://arxiv.org/abs/hep-ph/0211187'>arXiv:hep-ph/0211187</a>)</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Anomalous_magnetic_dipole_moment'>Anomalous magnetic dipole moment</a></em></li>
+</ul>
+
+<h3 id='qed_contributions_2'>QED contributions</h3>
 
 <p>The computation of the anomalous magnetic dipole moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a> is spelled out (via <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>) in</p>
 
@@ -1420,28 +1438,42 @@ margin-left: 0em;
 <li id='Scharf95'><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, section 3.10, culminating in (3.10.20), of <em><a class='existingWikiWord' href='/nlab/show/Finite+Quantum+Electrodynamics+--+The+Causal+Approach'>Finite Quantum Electrodynamics -- The Causal Approach</a></em>, Berlin: Springer-Verlag, 1995, 2nd edition</li>
 </ul>
 
-<p>For more see</p>
-
-<ul>
-<li id='Steinmann02'><a class='existingWikiWord' href='/nlab/show/Othmar+Steinmann'>Othmar Steinmann</a>, <em>What is the Magnetic Moment of the Electron?</em>, Commun.Math.Phys. 237 (2003) 181-201 (<a href='https://arxiv.org/abs/hep-ph/0211187'>arXiv:hep-ph/0211187</a>)</li>
-</ul>
+<h3 id='gravity_contributions'>Gravity contributions</h3>
 
 <p>Corrections at <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> from <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>quantum gravity</a> are discussed in</p>
 
 <ul>
-<li id='BerendsGastman75'>F. A. Berends, R. Gastmans, <em>Quantum gravity and the electron and muon anomalous magnetic moment</em>, Phys. Lett. B55 Issue 3 Feb 1975 311-312 (<a href='https://doi.org/10.1016/0370-2693(75'>doi:10.1016/0370-2693(75)90608-5</a>90608-5)</li>
+<li id='BerendsGastman75'>F. A. Berends, R. Gastmans, <em>Quantum gravity and the electron and muon anomalous magnetic moment</em>, Phys. Lett. B55 Issue 3 Feb 1975 311-312 (<a href='https://doi.org/10.1016/0370-2693(75)90608-5'>doi:10.1016/0370-2693(75)90608-5</a>)</li>
 </ul>
 
 <p>This discussion is adapted to <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> in</p>
 
 <ul>
-<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_bcc2a3943cc429c15390375ebb6dce26a47ba7bb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
+<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_58e20110545befa7629660f4183ad7fe61ac8a79_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
 </ul>
 
-<p>See also</p>
+<h3 id='axion_contributions_2'>Axion contributions</h3>
+
+<p>Contribution of hypothetical <a class='existingWikiWord' href='/nlab/show/axion'>axions</a> to the <a class='existingWikiWord' href='/nlab/show/anomalous+magnetic+moment'>anomalous magnetic moment</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> and <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a>:</p>
 
 <ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Anomalous_magnetic_dipole_moment'>Anomalous magnetic dipole moment</a></em></li>
+<li>
+<p>Yannis Semertzidis, <em>Magnetic and Electric Dipole Moments in Storage Rings</em>, chapter 6 of Markus Kuster, Georg Raffelt, Berta Beltrán (eds.), <em>Axions: Theory, cosmology, and Experimental Searches</em>, Lect. Notes Phys. 741 (Springer, Berlin Heidelberg 2008) (Kuster-Raffelt-Beltran 08ref=“https://doi.org/10.1007/978-3-540-73518-2_2”&gt;doi:10.1007/978-3-540-73518-2_2&lt;/a&gt;)</p>
+</li>
+
+<li id='MMPP16'>
+<p>W.J. Marciano, A. Masiero, P. Paradisi, M. Passera, <em>Contributions of axion-like particles to lepton dipole moments</em>, Phys. Rev. D 94, 115033 (2016) (<a href='https://arxiv.org/abs/1607.01022'>arXiv:1607.01022</a>)</p>
+</li>
+
+<li id='BNT17'>
+<p>Martin Bauer, Matthias Neubert, Andrea Thamm, <em>Collider Probes of Axion-Like Particles</em>, J. High Energ. Phys. (2017) 2017: 44. (<a href='https://arxiv.org/abs/1708.00443'>arXiv:1708.00443</a>,<a href='https://doi.org/10.1007/JHEP12(2017'>doi:10.1007/JHEP12(2017)044</a>044))</p>
+</li>
+</ul>
+
+<p>The basic relevant <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> are worked out here:</p>
+
+<ul>
+<li><a href='http://www-personal.umich.edu/~jbourj/peskin/6-3.pdf'>pdf</a></li>
 </ul>
 
 <p>
@@ -1460,14 +1492,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  8, 2018 06:33:29 
+  Revised on February 11, 2018 14:59:58 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anomalous+magnetic+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anomalous+magnetic+moment/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/anomalous+magnetic+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anomalous+magnetic+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/anomalous+magnetic+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anomalous+magnetic+moment/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/anomalous+magnetic+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anomalous+magnetic+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
